# pondie

./: AGENTS.md  README.md  plan.yaml  pyproject.toml  schema.md  schema.py
configs/: README.md
docs/: extract_entities_gpt5_nano_grounding.mmd
information_extraction/: README.md  __init__.py  cli.py  openai_utils.py  prompting.py  schema.py  schema_utils.py
information_extraction/config/: README.md
information_extraction/evaluation/: README.md
information_extraction/export/: README.md
information_extraction/extraction/: README.md  __init__.py  pipeline.py
information_extraction/ingest/: README.md
information_extraction/linking/: README.md
information_extraction/normalization/: README.md
information_extraction/optimization/: README.md  __init__.py
information_extraction/pipeline/: README.md
information_extraction/preprocess/: README.md
information_extraction/review/: README.md  __init__.py  editable_visualization.py  entity_visualization.py
information_extraction/schemas/: README.md
information_extraction/text/: README.md  __init__.py  extractor.py
information_extraction/validation/: README.md
prompts/: README.md  analysis.json  demographics_shared.json  group.json  links.json  modality.json  study.json  task.json
scripts/: compare_entity_discovery.py  confirm_entities_semantic.py  extract_entities_gpt5_nano.README.md  extract_entities_gpt5_nano.py  extract_entity_names_gpt5_nano.py  render_entity_review.py
tests/: test_text_extraction.py
